--- a/templates/home.html
+++ b/templates/home.html
@@ -140,7 +140,8 @@
           <header class="ctnr-s">
             <div class="header w100 mv5">
               <h1 id="greeting" class="header__title header__title--color">Hello stranger.&nbsp;</h1>
-              <h2 class="header__subtitle">You've discovered Area 51.</h2>
+              <h2 class="header__subtitle">You’ve discovered Area 51.</h2>
+              <p class="header__meta mv2 fs-s1 ts-subtle"><a class="ts-link" href="/admin/login">Login →</a></p>
             </div>
           </header>
 
